[package]
name = "timezone"
version = "0.0.0"
edition = "2021"
description = "A CLI timezone converter."
license = "Unlicense"
exclude = ["target/"]
repository = "https://github.com/LiquidZulu/timezone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
