[package]
name = "timezone"
version = "0.0.0"
edition = "2021"
description = "A CLI timezone converter."
license = "Unlicense"
exclude = ["target/"]
repository = "https://github.com/LiquidZulu/timezone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
colored = "2.1.0"
regex = "1.10.4"
